tests/NormalTests/paczka1/small_fuzzy/10803092.err
Error in line 1: s0YXMvJk5 S389 77,0
Error in line 9: s0YXMvJk5 A833 41,0
